# pydantic-ai-middleware

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: getting-help.md  index.md  installation.md  quickstart.md
docs/advanced/: async-guardrails.md  builder.md  conditional-middleware.md  config-loading.md  cost-tracking.md  hook-timeouts.md  middleware-chains.md  on-tool-error.md  parallel-execution.md  permission-decisions.md  pipeline-spec.md  tool-name-filtering.md
docs/api/: agent.md  chain.md  conditional.md  decorators.md  exceptions.md  guardrails.md  index.md  middleware.md  permissions.md  pipeline_spec.md  shields.md
docs/concepts/: conditional-middleware.md  config-loading.md  decorators.md  hooks.md  index.md  middleware-chains.md  middleware.md  parallel-execution.md
docs/examples/: cost-tracking.md  hook-timeouts.md  index.md  json-schema-validation.md  logging.md  permission-decisions.md  pii-detection.md  prompt-injection.md  rate-limiting.md  security.md  tool-error-handling.md  tool-name-filtering.md  toxicity-check.md
docs/includes/: abbreviations.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: README.md  async_guardrail.py  async_guardrails.py  basic_usage.py  chatbot.py  conditional_middleware.py  config_loading.py  config_pipeline.py  context_sharing.py  cost_tracking.py  hook_timeouts.py  json_schema_validation.py  middleware_chains.py  parallel_validation.py  permission_decisions.py  pii_detection.py  pipeline.json  pipeline.yaml  prompt_injection.py  spec_build_and_export.py  tool_error_handling.py  tool_guard.py  tool_name_filtering.py  toxicity_check.py
examples/hooks_showcase/: 01_before_run.py  02_after_run.py  03_before_model_request.py  04_before_tool_call.py  05_after_tool_call.py  06_on_tool_error.py  07_on_error.py  08_tool_blocking.py  09_permission_handler.py  10_tool_name_filtering.py  11_middleware_chain.py  12_decorator_middleware.py  13_context_sharing.py  14_cost_tracking.py  15_multiple_middleware.py  16_full_lifecycle.py  README.md  presentation.html
pydantic_ai_middleware/: __init__.py  agent.py  async_guardrail.py  base.py  builder.py  chain.py  conditional.py  config_loaders.py  context.py  decorators.py  exceptions.py  parallel.py  pipeline_spec.py  toolset.py  validation.py
src/pydantic_ai_middleware/: __init__.py  _timeout.py  agent.py  async_guardrail.py  base.py  chain.py  conditional.py  context.py  cost_tracking.py  decorators.py  exceptions.py  parallel.py  permissions.py  pipeline_spec.py  strategies.py  toolset.py
src/pydantic_ai_shields/: __init__.py  guardrails.py  shields.py
tests/: __init__.py  test_agent.py  test_async_guardrail.py  test_base.py  test_chain.py  test_conditional.py  test_config.py  test_context.py  test_cost_tracking.py  test_decorators.py  test_exceptions.py  test_guardrails.py  test_on_tool_error.py  test_parallel.py  test_permissions.py  test_pipeline_spec.py  test_shields.py  test_timeout.py  test_tool_name_matchers.py  test_toolset.py
